fix footer centering

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,7 @@
     }
     p {
         width: 90%;
+        margin: 0 auto;
         text-wrap: balance;
         letter-spacing: 1px;
         line-height: 1.75rem;
