intersection observer animations

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,9 +2,9 @@
     <h1>About Us</h1>
     <p>Welcome to our canine haven! At ------, we take pride in raising happy and healthy puppies that bring boundless joy to loving homes. Nestled in the heart of --------, our dedicated team of passionate breeders ensures each furball is raised with care and socialized for a seamless transition into your family. With a commitment to responsible breeding practices, we specialize in -------, crafting not just pets, but cherished members of your household. Discover the perfect addition to your family at --------, where every wagging tail tells a tale of love and companionship.</p>
     <div>
-        <img src="/images/instagram.png" alt="">
-        <img src="/images/linkedin.png" alt="">
-        <img src="/images/tiktok.png" alt="">
+        <img src="/images/instagram.png" alt="" class="about-io">
+        <img src="/images/linkedin.png" alt="" class="about-io">
+        <img src="/images/tiktok.png" alt="" class="about-io">
     </div>
 </section>
 
